# CppTemplate

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: README
lib/: README
src/: main.cpp
